// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[action/searchActions/input] 1`] = `
Object {
  "input": "test",
  "type": "SEARCH_INPUT",
}
`;

exports[`[action/searchActions] 1`] = `
Object {
  "input": "test",
  "type": "SEARCH_INPUT",
}
`;

exports[`[action/searchActions] 2`] = `
Object {
  "type": "SEARCH_KAKAPO",
}
`;

exports[`[action/searchActions] 3`] = `
Object {
  "term": "test",
  "type": "SEARCH_YOUTUBE",
}
`;

exports[`[action/searchActions] 4`] = `
Object {
  "term": "test",
  "type": "SEARCH_SOUNDCLOUD",
}
`;

exports[`[action/searchActions] 5`] = `
Object {
  "type": "SEARCH_REQUEST",
}
`;

exports[`[action/searchActions] 6`] = `
Object {
  "items": "test",
  "service": "test",
  "type": "SEARCH_REQUEST_SUCCESS",
}
`;

exports[`[action/searchActions] 7`] = `
Object {
  "err": "test",
  "type": "SEARCH_REQUEST_ERROR",
}
`;
